--- a/templates/article/homepage.html.twig
+++ b/templates/article/homepage.html.twig
@@ -25,6 +25,9 @@
                             <span>{{ article.title}}</span>
                             <small>({{ article.nonDeletedComments|length }} comments)</small>
                             <br>
+                            {% for tag in article.tags %}
+                                <span class="badge badge-secondary">{{ tag.name }}</span>
+                            {% endfor %}
                             <span class="align-left article-details"><img class="article-author-img rounded-circle" src="{{ asset('images/alien-profile.png') }}"> {{ article.author }} </span>
                             <span class="pl-5 article-details float-right"> {{ article.publishedAt|ago }}</span>
                         </div>
