--- a/templates/comment_admin/index.html.twig
+++ b/templates/comment_admin/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="row">
         <div class="col-sm-12">
-            <h1>Manage Comments</h1>
+            <<h1>Manage Comments ({{ pagination.getTotalItemCount }})</h1>
 
             <form>
                 <div class="input-group mb-3">
@@ -34,7 +34,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for comment in comments %}
+                {% for comment in pagination %}
                     <tr>
                         <td>
                             <a href="{{ path('article_show', {'slug': comment.article.slug}) }}">
@@ -60,6 +60,9 @@
                 {% endfor %}
                 </tbody>
             </table>
+        </div>
+        <div class="mx-auto">
+            {{ knp_pagination_render(pagination) }}
         </div>
     </div>
 {% endblock %}
