--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,7 @@
                     <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
                 </form>
                 <ul class="navbar-nav ml-auto">
-                {% if is_granted('ROLE_USER_ARTICLE') %}
+                {% if is_granted('ROLE_USER') %}
                     <li class="nav-item dropdown" style="margin-right: 75px;">
                         <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img class="nav-profile-img rounded-circle" src="{{ app.user.avatarUrl(100) }}">
@@ -55,6 +55,9 @@
                 {% else %}
                     <li class="nav-item">
                         <a style="color: #fff;" class="nav-link" href="{{ path('app_login') }}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a style="color: #fff;" class="nav-link" href="{{ path('app_register') }}">Register</a>
                     </li>
                 {% endif %}
                 </ul>
