--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -7,6 +7,14 @@
 {% endblock %}
 {% block body %}
     {# todo - replae with a Symfony form! #}
+    {% for message in app.flashes('error') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
+    {% if error %}
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
     <form class="form-signin" method="post">
         <h1 class="h3 mb-3 font-weight-normal">Register</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
