--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="{{ asset('css/login.css') }}"
 {% endblock %}
 {% block body %}
-        {{  form_start(registrationForm) }}
+        {{  form_start(registrationForm, {
+            'attr': {'class': 'form-signin'}
+        }) }}
+            <h1 class="h3 mb-3 font-weight-normal">Register</h1>
             {{ form_widget(registrationForm) }}
             <button class="btn btn-lg btn-primary btn-block" type="submit">
                 Register
