--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -13,7 +13,9 @@
         {%- set widget_attr = {attr: {'aria-describedby': id ~"_help"}} -%}
     {%- endif -%}
 
-    {{- form_label(form) -}}
+    {{- form_label(form, null, {
+        label_attr: { class: 'sr-only' }
+    }) -}}
     {{- form_errors(form) -}}
     {{- form_widget(form, widget_attr) -}}
     {{- form_help(form) -}}
@@ -25,11 +27,19 @@
             'attr': {'class': 'form-signin'}
         }) }}
             <h1 class="h3 mb-3 font-weight-normal">Register</h1>
-            {{ form_widget(registrationForm) }}
+            {{ form_row(registrationForm.email,{
+                attr: { placeholder: 'Email' }
+            }) }}
+            {{ form_row(registrationForm.plainPassword,{
+                attr: { placeholder: 'Password' }
+            }) }}
+            {{ form_row(registrationForm.agreeTerms) }}
             <button class="btn btn-lg btn-primary btn-block" type="submit">
                 Register
             </button>
         {{ form_end(registrationForm) }}
+
+{% endblock %}
 
 {#
     {% for message in app.flashes('error') %}
@@ -54,4 +64,3 @@
         </button>
     </form>
     #}
-{% endblock %}
