--- a/templates/article_admin/_form.html.twig
+++ b/templates/article_admin/_form.html.twig
@@ -3,10 +3,12 @@
             label: 'Article title'
         }) }}
         {{ form_row(articleForm.content) }}
-        {{ form_row(articleForm.location)  }}
-        {{ form_row(articleForm.specificLocationName)  }}
         {% if articleForm.publishedAt is defined %}
                 {{ form_row(articleForm.publishedAt) }}
+        {% endif %}
+        {{ form_row(articleForm.location)  }}
+        {% if articleForm.specificLocationName is defined %}
+                {{ form_row(articleForm.specificLocationName)  }}
         {% endif %}
         {{ form_row(articleForm.author) }}
 
