--- a/templates/article_admin/edit.html.twig
+++ b/templates/article_admin/edit.html.twig
@@ -7,3 +7,8 @@
         button_text: 'Update!'
     }) }}
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/admin_article_form.js') }}"></script>
+{% endblock %}
