for Creating a Reusable (& Amazing) Symfony Bundle chapter 1 https://symfonycasts.com/screencast/symfony-bundle/autowiring-public-private

--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -33,6 +33,14 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
+                        <div class="article-text">
+                            articleContent start
+                            {{ articleContent|raw }}
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
                         <p class="share-icons mb-5"><span class="pr-1">Share:</span> <i class="pr-1 fa fa-facebook-square"></i><i class="pr-1 fa fa-twitter-square"></i><i class="pr-1 fa fa-reddit-square"></i><i class="pr-1 fa fa-share-alt-square"></i></p>
                     </div>
                 </div>
